--- a/index.html
+++ b/index.html
@@ -3,16 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Random Quotes Generator</title>
-    <link rel="stylesheet" href="style.css">k
+    <title>Download Progress Bar</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <main>
-        <button>Click!!!</button>
-    </main>
-
+    <div id="main">
+        <div id="card">
+            <div class="progress">
+                <p>Click the Download button to download the file</p>
+                <div id="outer">
+                    <div id="inner"></div>
+                </div>
+                <div class="container">
+                    <h1>0%</h1>
+                    <button>Download</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="./script.js"></script>
-    
 </body>
 </html>
