--- a/index.html
+++ b/index.html
@@ -5,20 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Download Progress Bar</title>
     <link rel="stylesheet" href="style.css">
+    <link
+    href="https://cdn.jsdelivr.net/npm/remixicon@4.8.0/fonts/remixicon.css"
+    rel="stylesheet"
+    />
 </head>
 <body>
     <div id="main">
         <div id="card">
-            <div class="progress">
-                <p>Click the Download button to download the file</p>
-                <div id="outer">
-                    <div id="inner"></div>
-                </div>
-                <div class="container">
-                    <h1>0%</h1>
-                    <button>Download</button>
-                </div>
-            </div>
+            <img id="pic" src="https://images.unsplash.com/photo-1614425640886-5fe51c397c98?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8bW9kZWxzJTIwcGhvdG98ZW58MHx8MHx8fDA%3D" alt="">
+            <!-- <i class="ri-heart-3-fill"></i> -->
+             <h2>Brooke Cagle</h2>
+             <i id="love" class="ri-heart-3-fill"></i>
         </div>
     </div>
 
